--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A json server which provide fake photos",
   "bin": "./bin/fake-photos.js",
   "files": [
+    "./bin",
     "./build"
   ],
   "scripts": {
