--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A json server which provide fake photos",
   "bin": "./bin/fake-photos.js",
   "files": [
-    "./bin",
-    "./build"
+    "bin/",
+    "build/"
   ],
   "scripts": {
     "build": "babel src --out-dir build",
